<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="welcome">. . . Welcome ! . . .</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnDot">.</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnMultiply">X</string>
    <string name="btnDivide">/</string>
    <string name="btnEquals">=</string>
    <string name="btnClear">CLR</string>
    <string name="btnAbout">about</string>
    <string name="about">by Iskandar Mazzawi &#169;</string>
    <string name="eeggStart">...</string>
</resources>
