<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/custom_back">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtInput"
            android:text="@string/welcome"
            android:textColorHint="#00ff00"
            android:textColor="#00ff00"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:maxLength="26"
            android:onClick="onClickEEgg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
        <Button
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:textSize="22sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#442200"
            android:textColor="#ffffff"
            android:text="@string/btn1"
            android:id="@+id/btn1"
            android:onClick="onClickNum"
            />
        <Button
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:textSize="22sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#442200"
            android:textColor="#ffffff"
            android:text="@string/btn2"
            android:id="@+id/btn2"
            android:onClick="onClickNum"
            />
        <Button
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:textSize="22sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#442200"
            android:textColor="#ffffff"
            android:text="@string/btn3"
            android:id="@+id/btn3"
            android:onClick="onClickNum"
            />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3">
        <Button
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:textSize="22sp"
            android:layout_marginStart="8dp"
            android:background="#884400"
            android:textColor="#ffffff"
            android:text="@string/btnPlus"
            android:id="@+id/btnPlus"
            android:onClick="onClickOp"
            />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#442200"
                android:textColor="#ffffff"
                android:text="@string/btn4"
                android:id="@+id/btn4"
                android:onClick="onClickNum"
                />
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#442200"
                android:textColor="#ffffff"
                android:text="@string/btn5"
                android:id="@+id/btn5"
                android:onClick="onClickNum"
                />
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#442200"
                android:textColor="#ffffff"
                android:text="@string/btn6"
                android:id="@+id/btn6"
                android:onClick="onClickNum"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3">
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:background="#884400"
                android:textColor="#ffffff"
                android:text="@string/btnMinus"
                android:id="@+id/btnMinus"
                android:onClick="onClickOp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#442200"
                android:textColor="#ffffff"
                android:text="@string/btn7"
                android:id="@+id/btn7"
                android:onClick="onClickNum"
                />
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#442200"
                android:textColor="#ffffff"
                android:text="@string/btn8"
                android:id="@+id/btn8"
                android:onClick="onClickNum"
                />
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#442200"
                android:textColor="#ffffff"
                android:text="@string/btn9"
                android:id="@+id/btn9"
                android:onClick="onClickNum"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3">
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:background="#884400"
                android:textColor="#ffffff"
                android:text="@string/btnMultiply"
                android:id="@+id/btnMultiply"
                android:onClick="onClickOp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#442200"
                android:textColor="#ffffff"
                android:text="@string/btnDot"
                android:id="@+id/btnDot"
                android:onClick="onClickDot"
                />
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#442200"
                android:textColor="#ffffff"
                android:text="@string/btn0"
                android:id="@+id/btn0"
                android:onClick="onClickNum"
                />
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#884400"
                android:textColor="#ffffff"
                android:text="@string/btnEquals"
                android:id="@+id/btnEquals"
                android:onClick="onClickResult"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3">
            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:background="#884400"
                android:textColor="#ffffff"
                android:text="@string/btnDivide"
                android:id="@+id/btnDivide"
                android:onClick="onClickOp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center"
            android:textSize="32sp"
            android:textStyle="bold|italic"
            android:fontFamily="cursive"
            android:layout_marginStart="8dp"
            android:background="#880000"
            android:textColor="#ffffff"
            android:text="@string/btnClear"
            android:id="@+id/btnClear"
            android:onClick="onClickClear"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center"
            android:textSize="24sp"
            android:fontFamily="casual"
            android:layout_marginStart="20dp"
            android:background="#446611"
            android:textColor="#ffffff"
            android:text="@string/btnAbout"
            android:id="@+id/btnAbout"
            android:onClick="onClickAbout"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:text="@string/eeggStart"
            android:layout_gravity="bottom"
            android:textSize="22sp"
            android:layout_marginStart="60dp"
            android:gravity="bottom"
            android:id="@+id/txtEEgg"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:onClick="onClickBottom">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
        <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>